--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -18,4 +18,23 @@
       gap: 10px;
     }
   }
+
+  &__hamburger {
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    &__collection {
+      display: none;
+    }
+
+    &__hamburger {
+      display: block;
+    }
+  }
 }
